Fixed Profile drop Margin and Padding

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -77,7 +77,7 @@
     </button>
   </div>
 
-  <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none opacity-0 transform scale-95 transition-opacity duration-300" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" id="user-menu-items">
+  <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none opacity-0 transform scale-95 transition-opacity duration-300" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" id="user-menu-items">
 <div class="py-3 flex items-center">
     <div class="pl-3 mr-2">
       <img class="h-8 w-8 rounded-full" src="https://images.pexels.com/photos/106685/pexels-photo-106685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
@@ -89,7 +89,7 @@
 
 
     <div class="hover:bg-green-200 transition-colors duration-300">
-      <button class="block px-4 py-2 text-sm text-gray-700 focus:outline-none font-maven" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</button>
+      <button class="block px-4 pb-2 text-sm text-gray-700 focus:outline-none font-maven" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</button>
     </div>
 <div class="hover:bg-green-200 transition-colors duration-300">
   <a href="/garage" class="block px-4 py-2 text-sm text-gray-700 focus:outline-none font-maven" role="menuitem" tabindex="-1" id="user-menu-item-1">Your Garage</a>
