--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -151,7 +151,7 @@
           <p class="text-center text-sm leading-6 text-gray-500">Florida</p>
         </li>
          <li class="w-9/12 items-center">
-          <img class="aspect-[14/13] w-full rounded-full object-cover shadow-lg" src="/images/owlsmaincircle.png" alt="">
+          <img class="aspect-[14/13] w-full rounded-full object-cover shadow-lg" src="/images/ra.png" alt="">
           <h3 class="text-center mt-6 text-lg font-semibold leading-8 tracking-tight text-black">Richard Aspinall</h3>
           <p class="text-center text-base leading-7 text-owltext1">Backend Database</p>
           <p class="text-center text-sm leading-6 text-gray-500">Washington</p>
