--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -73,7 +73,7 @@
  <div>
     <button type="button" class="flex rounded-full" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
       <span class="sr-only">Open user menu</span>
-      <img class="h-8 w-8 rounded-full" src="https://images.pexels.com/photos/106685/pexels-photo-106685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
+      <img class="h-8 w-8 rounded-full max-w-none" src="https://images.pexels.com/photos/106685/pexels-photo-106685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
     </button>
   </div>
 
@@ -82,7 +82,7 @@
     <div class="pl-3 mr-2">
       <img class="h-8 w-8 rounded-full" src="https://images.pexels.com/photos/106685/pexels-photo-106685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
     </div>
-    <div class="-mt-1 rounded-t-md px-4 py-2 text-sm text-gray-700">
+    <div class="-mt-1 rounded-t-md px-4 py-2 text-sm text-gray-700 max-w-[calc(100%-3rem)]">
       Welcome {{username}}!
     </div>
   </div>
