--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -112,7 +112,7 @@
       </dl>
     </div>
 
-    <!-- team -->
+    <!-- Team -->
     <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-40 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h2 class="text-3xl font-bold tracking-tight text-owlsearch2 sm:text-4xl">Our team</h2>
