--- a/views/garage.handlebars
+++ b/views/garage.handlebars
@@ -119,7 +119,7 @@
  <tr>
         <td class="py-4 pl-4 pr-8 sm:pl-6 lg:pl-8">
           <div class="flex items-center gap-x-4">
-            <img src="/images/1969-ford-mustang-boss-302.jpeg" alt="" class="h-8 w-8 rounded-full bg-gray-800">
+            <img src="/images/1969-ford-mustang-boss-302.jpeg" alt="Icon of Car" class="h-8 w-8 rounded-full bg-gray-800">
             <div class="truncate text-sm font-medium leading-6 text-black">2014 Toyota RAV4</div>
           </div>
         </td>
@@ -157,7 +157,7 @@
        <tr>
         <td class="py-4 pl-4 pr-8 sm:pl-6 lg:pl-8">
           <div class="flex items-center gap-x-4">
-            <img src="/images/1969-volkswagon-beetle.jpg" alt="" class="h-8 w-8 rounded-full bg-gray-800">
+            <img src="/images/1969-volkswagon-beetle.jpg" alt="Icon of Car" class="h-8 w-8 rounded-full bg-gray-800">
             <div class="truncate text-sm font-medium leading-6 text-black">2020 Ford Explorer</div>
           </div>
         </td>
@@ -195,7 +195,7 @@
        <tr>
         <td class="py-4 pl-4 pr-8 sm:pl-6 lg:pl-8">
           <div class="flex items-center gap-x-4">
-            <img src="/images/1970-corvette-chronology.jpg" alt="" class="h-8 w-8 rounded-full bg-gray-800">
+            <img src="/images/1970-corvette-chronology.jpg" alt="Icon of Car" class="h-8 w-8 rounded-full bg-gray-800">
             <div class="truncate text-sm font-medium leading-6 text-black">2011 Mercedes GL450</div>
           </div>
         </td>
@@ -233,7 +233,7 @@
      <tr>
         <td class="py-4 pl-4 pr-8 sm:pl-6 lg:pl-8">
           <div class="flex items-center gap-x-4">
-            <img src="/images/1955_mercedes-benz_300sl-gullwing_t7.jpg" alt="" class="h-8 w-8 rounded-full bg-gray-800">
+            <img src="/images/1955_mercedes-benz_300sl-gullwing_t7.jpg" alt="Icon of Car" class="h-8 w-8 rounded-full bg-gray-800">
             <div class="truncate text-sm font-medium leading-6 text-black">1993 BMW 325IS</div>
           </div>
         </td>
@@ -271,7 +271,7 @@
       <tr>
         <td class="py-4 pl-4 pr-8 sm:pl-6 lg:pl-8">
           <div class="flex items-center gap-x-4">
-            <img src="/images/1981-Datsun-B-210.jpg" alt="" class="h-8 w-8 rounded-full bg-gray-800">
+            <img src="/images/1981-Datsun-B-210.jpg" alt="Icon of Car" class="h-8 w-8 rounded-full bg-gray-800">
             <div class="truncate text-sm font-medium leading-6 text-black">2017 Kia Sorento</div>
           </div>
         </td>
@@ -309,7 +309,7 @@
       <tr>
         <td class="py-4 pl-4 pr-8 sm:pl-6 lg:pl-8">
           <div class="flex items-center gap-x-4">
-            <img src="/images/2017-Ford-F350.png" alt="" class="h-8 w-8 rounded-full bg-gray-800">
+            <img src="/images/2017-Ford-F350.png" alt="Icon of Car" class="h-8 w-8 rounded-full bg-gray-800">
             <div class="truncate text-sm font-medium leading-6 text-black">2022 Honda NSX</div>
           </div>
         </td>
@@ -347,7 +347,7 @@
       <tr>
         <td class="py-4 pl-4 pr-8 sm:pl-6 lg:pl-8">
           <div class="flex items-center gap-x-4">
-            <img src="/images/2019-civic-hatchback-front.png" alt="" class="h-8 w-8 rounded-full bg-gray-800">
+            <img src="/images/2019-civic-hatchback-front.png" alt="Icon of Car" class="h-8 w-8 rounded-full bg-gray-800">
             <div class="truncate text-sm font-medium leading-6 text-black">1981 Cadillac L62</div>
           </div>
         </td>
