--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="bg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-cyan-200 via-yellow-100 to-teal-100 relative isolate pt-14 flex min-h-full items-center justify-center px-4 py-12 sm:px-6 lg:px-8">
     <div class="w-full max-w-sm space-y-10">
       <div>
-        <img class="mx-auto h-32 w-auto shadow-xl rounded-full" src="/images/owlsmaincircle.png" alt="Your Company">
+        <img class="mx-auto h-32 w-auto shadow-xl rounded-full" src="/images/owlsmaincircle.png" alt="Wheel Wisdom">
         <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
       </div>
 
