--- a/views/partials/testimonials.handlebars
+++ b/views/partials/testimonials.handlebars
@@ -18,7 +18,7 @@
           <p>“I totally found the car of my dreams and i couldn't have done it with the owls!!🥰”</p>
         </blockquote>
         <figcaption class="flex items-center gap-x-4 border-t border-gray-900/10 px-6 py-4">
-          <img class="h-10 w-10 flex-none rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
+          <img class="h-10 w-10 flex-none rounded-full bg-gray-50" src="/images/owls1icon.png" alt="Icon of owl">
           <div class="flex-auto">
             <div class="font-semibold">HedWig</div>
             <div class="text-gray-600">@HedWig</div>
@@ -33,7 +33,7 @@
               <p>“I was able to ask around and get great insight on the new Honda civic.”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
-              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
+              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="Icon of owl">
               <div>
                 <div class="font-semibold">JohnDoe</div>
                 <div class="text-gray-600">@Doey4454</div>
@@ -49,7 +49,7 @@
               <p>“OMG world class service. I tots didnt know this existed. Thanks Wheel Wisdom”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
-              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
+              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="Icon of owl">
               <div>
                 <div class="font-semibold">JaneT</div>
                 <div class="text-gray-600">@Crazypink34</div>
@@ -67,7 +67,7 @@
               <p>“WheelWisdom rocks, recommending it to everyone”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
-              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
+              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="Icon of owl">
               <div>
                 <div class="font-semibold">Owen Z.</div>
                 <div class="text-gray-600">@shopper4life</div>
@@ -83,15 +83,13 @@
               <p>“I've learned so much for so many other chevy truck owners”</p>
             </blockquote>
             <figcaption class="mt-6 flex items-center gap-x-4">
-              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="">
+              <img class="h-10 w-10 rounded-full bg-gray-50" src="/images/owls1icon.png" alt="Icon of owl">
               <div>
                 <div class="font-semibold">Anonymous</div>
                 <div class="text-gray-600">@vroomvroom</div>
               </div>
             </figcaption>
           </figure>
-
-          <!-- More testimonials... -->
         </div>
       </div>
     </div>
